gen/building/antlr/BuildingParser.java
// Generated from /Users/madsbjoern/Documents/Git/JBuild/src/main/antlr4/renderer.Building.g4 by ANTLR 4.8
package building.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BuildingParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, AXIS=19, LPAREN=20, RPAREN=21, LBRACE=22, TILDE=23, RBRACE=24, 
		PERCENTAGE=25, COMMA=26, NUMBER=27, FACE=28, ASTERIX=29, COLON=30, DOT=31, 
		SEMICOLON=32, NAME=33, VARIABLE=34, WS=35, STRING=36, PLUS=37, MINUS=38, 
		DIVIDE=39, EQUALS=40, NOT_EQUALS=41, ASSIGN=42;
	public static final int
		RULE_program = 0, RULE_plotDecl = 1, RULE_shapeDeclaration = 2, RULE_polyStatements = 3, 
		RULE_polyCommand = 4, RULE_simpleCommand = 5, RULE_assignment = 6, RULE_polyFinalCommand = 7, 
		RULE_extrudeCommand = 8, RULE_faceDecl = 9, RULE_enclosedPolystatements = 10, 
		RULE_splitCommand = 11, RULE_splitRepeating = 12, RULE_splitDecl = 13, 
		RULE_arguments = 14, RULE_ifCommand = 15, RULE_expression = 16, RULE_value = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "plotDecl", "shapeDeclaration", "polyStatements", "polyCommand", 
			"simpleCommand", "assignment", "polyFinalCommand", "extrudeCommand", 
			"faceDecl", "enclosedPolystatements", "splitCommand", "splitRepeating", 
			"splitDecl", "arguments", "ifCommand", "expression", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'plot'", "'->'", "'color'", "'translate'", "'translateG'", "'rotateX'", 
			"'rotateY'", "'rotateZ'", "'rotatePX'", "'rotatePY'", "'rotatePZ'", "'scale'", 
			"'polygon'", "'extrude'", "'split'", "'if'", "'true'", "'false'", null, 
			"'('", "')'", "'{'", "'~'", "'}'", "'%'", "','", null, null, "'*'", "':'", 
			"'.'", "';'", null, null, null, null, "'+'", "'-'", "'/'", "'=='", "'!='", 
			"':='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "AXIS", "LPAREN", "RPAREN", 
			"LBRACE", "TILDE", "RBRACE", "PERCENTAGE", "COMMA", "NUMBER", "FACE", 
			"ASTERIX", "COLON", "DOT", "SEMICOLON", "NAME", "VARIABLE", "WS", "STRING", 
			"PLUS", "MINUS", "DIVIDE", "EQUALS", "NOT_EQUALS", "ASSIGN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "renderer.Building.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BuildingParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public PlotDeclContext plotDecl() {
			return getRuleContext(PlotDeclContext.class,0);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(BuildingParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(BuildingParser.SEMICOLON, i);
		}
		public List<ShapeDeclarationContext> shapeDeclaration() {
			return getRuleContexts(ShapeDeclarationContext.class);
		}
		public ShapeDeclarationContext shapeDeclaration(int i) {
			return getRuleContext(ShapeDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARIABLE) {
				{
				{
				setState(36);
				assignment();
				setState(37);
				match(SEMICOLON);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			plotDecl();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(45);
				shapeDeclaration();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlotDeclContext extends ParserRuleContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode NAME() { return getToken(BuildingParser.NAME, 0); }
		public PlotDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPlotDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlotDeclContext plotDecl() throws RecognitionException {
		PlotDeclContext _localctx = new PlotDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_plotDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__0);
			setState(52);
			arguments();
			setState(53);
			match(T__1);
			setState(54);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShapeDeclarationContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(BuildingParser.NAME, 0); }
		public PolyStatementsContext polyStatements() {
			return getRuleContext(PolyStatementsContext.class,0);
		}
		public ShapeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shapeDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitShapeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShapeDeclarationContext shapeDeclaration() throws RecognitionException {
		ShapeDeclarationContext _localctx = new ShapeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_shapeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(NAME);
			setState(57);
			match(T__1);
			setState(58);
			polyStatements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolyStatementsContext extends ParserRuleContext {
		public PolyStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polyStatements; }
	 
		public PolyStatementsContext() { }
		public void copyFrom(PolyStatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PolyStatementFinalContext extends PolyStatementsContext {
		public PolyFinalCommandContext polyFinalCommand() {
			return getRuleContext(PolyFinalCommandContext.class,0);
		}
		public PolyStatementFinalContext(PolyStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyStatementFinal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolyStatementSingleContext extends PolyStatementsContext {
		public PolyCommandContext polyCommand() {
			return getRuleContext(PolyCommandContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(BuildingParser.SEMICOLON, 0); }
		public PolyStatementSingleContext(PolyStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyStatementSingle(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolyStatementsMultipleContext extends PolyStatementsContext {
		public PolyCommandContext polyCommand() {
			return getRuleContext(PolyCommandContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(BuildingParser.SEMICOLON, 0); }
		public PolyStatementsContext polyStatements() {
			return getRuleContext(PolyStatementsContext.class,0);
		}
		public PolyStatementsMultipleContext(PolyStatementsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyStatementsMultiple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolyStatementsContext polyStatements() throws RecognitionException {
		PolyStatementsContext _localctx = new PolyStatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_polyStatements);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new PolyStatementsMultipleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				polyCommand();
				setState(61);
				match(SEMICOLON);
				setState(62);
				polyStatements();
				}
				break;
			case 2:
				_localctx = new PolyStatementSingleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				polyCommand();
				setState(65);
				match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new PolyStatementFinalContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				polyFinalCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolyCommandContext extends ParserRuleContext {
		public PolyCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polyCommand; }
	 
		public PolyCommandContext() { }
		public void copyFrom(PolyCommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PolyCommandAssignmentContext extends PolyCommandContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PolyCommandAssignmentContext(PolyCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyCommandAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolyCommandSimpleContext extends PolyCommandContext {
		public SimpleCommandContext simpleCommand() {
			return getRuleContext(SimpleCommandContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public PolyCommandSimpleContext(PolyCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyCommandSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolyCommandContext polyCommand() throws RecognitionException {
		PolyCommandContext _localctx = new PolyCommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_polyCommand);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
				_localctx = new PolyCommandSimpleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				simpleCommand();
				setState(71);
				arguments();
				}
				break;
			case VARIABLE:
				_localctx = new PolyCommandAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleCommandContext extends ParserRuleContext {
		public SimpleCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleCommand; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitSimpleCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleCommandContext simpleCommand() throws RecognitionException {
		SimpleCommandContext _localctx = new SimpleCommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simpleCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(BuildingParser.VARIABLE, 0); }
		public TerminalNode ASSIGN() { return getToken(BuildingParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(VARIABLE);
			setState(79);
			match(ASSIGN);
			setState(80);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolyFinalCommandContext extends ParserRuleContext {
		public PolyFinalCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polyFinalCommand; }
	 
		public PolyFinalCommandContext() { }
		public void copyFrom(PolyFinalCommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PolyExtrudeCommandContext extends PolyFinalCommandContext {
		public ExtrudeCommandContext extrudeCommand() {
			return getRuleContext(ExtrudeCommandContext.class,0);
		}
		public PolyExtrudeCommandContext(PolyFinalCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyExtrudeCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolySplitCommandContext extends PolyFinalCommandContext {
		public SplitCommandContext splitCommand() {
			return getRuleContext(SplitCommandContext.class,0);
		}
		public PolySplitCommandContext(PolyFinalCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolySplitCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolyIfCommandContext extends PolyFinalCommandContext {
		public IfCommandContext ifCommand() {
			return getRuleContext(IfCommandContext.class,0);
		}
		public PolyIfCommandContext(PolyFinalCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyIfCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PolyCommandNameContext extends PolyFinalCommandContext {
		public TerminalNode NAME() { return getToken(BuildingParser.NAME, 0); }
		public PolyCommandNameContext(PolyFinalCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitPolyCommandName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolyFinalCommandContext polyFinalCommand() throws RecognitionException {
		PolyFinalCommandContext _localctx = new PolyFinalCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_polyFinalCommand);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				_localctx = new PolyCommandNameContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(NAME);
				}
				break;
			case T__13:
				_localctx = new PolyExtrudeCommandContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				extrudeCommand();
				}
				break;
			case T__14:
				_localctx = new PolySplitCommandContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				splitCommand();
				}
				break;
			case T__15:
				_localctx = new PolyIfCommandContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				ifCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtrudeCommandContext extends ParserRuleContext {
		public ExtrudeCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extrudeCommand; }
	 
		public ExtrudeCommandContext() { }
		public void copyFrom(ExtrudeCommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExtrudeFullContext extends ExtrudeCommandContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(BuildingParser.LBRACE, 0); }
		public List<FaceDeclContext> faceDecl() {
			return getRuleContexts(FaceDeclContext.class);
		}
		public FaceDeclContext faceDecl(int i) {
			return getRuleContext(FaceDeclContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(BuildingParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BuildingParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BuildingParser.COMMA, i);
		}
		public ExtrudeFullContext(ExtrudeCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitExtrudeFull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExtrudeSimpleContext extends ExtrudeCommandContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ExtrudeSimpleContext(ExtrudeCommandContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitExtrudeSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtrudeCommandContext extrudeCommand() throws RecognitionException {
		ExtrudeCommandContext _localctx = new ExtrudeCommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_extrudeCommand);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new ExtrudeSimpleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(T__13);
				setState(89);
				arguments();
				}
				break;
			case 2:
				_localctx = new ExtrudeFullContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(T__13);
				setState(91);
				arguments();
				setState(92);
				match(LBRACE);
				setState(93);
				faceDecl();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(94);
					match(COMMA);
					setState(95);
					faceDecl();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(RBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaceDeclContext extends ParserRuleContext {
		public TerminalNode FACE() { return getToken(BuildingParser.FACE, 0); }
		public TerminalNode COLON() { return getToken(BuildingParser.COLON, 0); }
		public EnclosedPolystatementsContext enclosedPolystatements() {
			return getRuleContext(EnclosedPolystatementsContext.class,0);
		}
		public FaceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faceDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitFaceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FaceDeclContext faceDecl() throws RecognitionException {
		FaceDeclContext _localctx = new FaceDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_faceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(FACE);
			setState(106);
			match(COLON);
			setState(107);
			enclosedPolystatements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnclosedPolystatementsContext extends ParserRuleContext {
		public PolyStatementsContext polyStatements() {
			return getRuleContext(PolyStatementsContext.class,0);
		}
		public TerminalNode NAME() { return getToken(BuildingParser.NAME, 0); }
		public EnclosedPolystatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enclosedPolystatements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitEnclosedPolystatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnclosedPolystatementsContext enclosedPolystatements() throws RecognitionException {
		EnclosedPolystatementsContext _localctx = new EnclosedPolystatementsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enclosedPolystatements);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				polyStatements();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SplitCommandContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(BuildingParser.LPAREN, 0); }
		public TerminalNode AXIS() { return getToken(BuildingParser.AXIS, 0); }
		public TerminalNode RPAREN() { return getToken(BuildingParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(BuildingParser.LBRACE, 0); }
		public List<SplitDeclContext> splitDecl() {
			return getRuleContexts(SplitDeclContext.class);
		}
		public SplitDeclContext splitDecl(int i) {
			return getRuleContext(SplitDeclContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(BuildingParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BuildingParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BuildingParser.COMMA, i);
		}
		public SplitRepeatingContext splitRepeating() {
			return getRuleContext(SplitRepeatingContext.class,0);
		}
		public SplitCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splitCommand; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BuildingVisitor ) return ((BuildingVisitor<? extends T>)visitor).visitSplitCommand(this);
			else return visitor.visitChildren(this);
		}
	}
